# longform

./: .env.example  .gitignore  Longform_Video_Factory.ipynb  README.md  n8n_youtube_upload_workflow.json  pyproject.toml
src/: __init__.py  assembler.py  config.py  flow_gen.py  flow_prompts.py  gdrive.py  pipeline.py  researcher.py  scene_gen.py  scriptwriter.py  seo.py  sheets.py  stock.py  voice.py  youtube_clip.py  youtube_reference.py
tests/: test_assembler.py  test_gdrive.py  test_pipeline.py  test_scene_gen.py  test_scriptwriter.py  test_seo.py  test_sheets.py  test_voice.py  test_youtube_clip.py  test_youtube_reference.py
